--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -317,7 +317,7 @@
           Пробiотик для дорослих та дiтей з перших днiв життя
         </p>
         <p class="translated-text" key="header-subtext-two">
-          Не містить барвників, глютину, лактози, штучних пігментів
+          Не містить барвників, глютену, лактози, штучних пігментів
         </p>
       </div>
     </div>
@@ -505,7 +505,7 @@
               class="parallax-title translated-text sec-text__dsc-3"
               key="application-text-three"
             >
-              Режим дозування – 1 крапля на добу!<br /><small
+              Кратність прийому – 1 раз на добу!<br /><small
                 >Дітям з 0+ днів від народження до 3-х років – по 1 краплі один
                 раз на добу під час їжі.<br /><b
                   >Зручний спосіб використання.</b
@@ -593,22 +593,22 @@
         <li>
           <div></div>
           <p class="translated-text" key="doses-text-one">
-            Немовлята та дiти вiком до 3 рокiв<br /><span
-              >1 крапля на день пiд час прийому їжi</span
+            Дітям від народження до 3 років<br /><span
+              >По 1 краплі один раз на добу під час їжі</span
             >
           </p>
         </li>
         <li>
           <div></div>
           <p class="translated-text" key="doses-text-two">
-            Дiти вiд 3 до 12 рокiв<br /><span>6 крапель на день</span>
+            Дітям віком від 3 до 12 років<br /><span>По 6 крапель один раз на добу під час їжі</span>
           </p>
         </li>
         <li>
           <div></div>
           <p class="translated-text" key="doses-text-three">
-            Дiти вiком вiд 12 рокiв та дорослi<br /><span
-              >12 крапель на день</span
+            Дітям старше 12 років<br /><span
+              >По 12 крапель один раз на добу під час їжі</span
             >
           </p>
         </li>
@@ -708,9 +708,7 @@
         Актив Флора бебі 5 мл. Дієтична добавка. Не є лікарським засобом. На
         правах реклами. Перед застосуванням бажано проконсультуватись з лікарем
         та ознайомитися з інструкцією для застосування. Зберігати у недоступному
-        для дітей місці. Виробник: Komarko Sp. z o. o. (Польща), висновок
-        санітарно-епідеміологічної експертизи №3/8-А-88-18-65542 Е від
-        31.01.2018. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісова
+        для дітей місці. Виробник: Komarko Sp. z o. o. (Польща), висновок санітарно-епідеміологічної експертизи №3/28-А-3414-20-69296 Е від 25.11.2020 р. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісова
         30-А, Пуща-Водиця, м. Київ, 04075; телефон: (044) 401-81-03,
         www.alpenpharma.com
       </p>
