--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Cinnabsin</title>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <!-- <script async src="https://cdn.ampproject.org/v0.js"></script> -->
     <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
     <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
     <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
