--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -18,7 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 
-    <style amp-boilerplate>
+    <style amp-boilerplate rel='shortcut icon'>
         .disclamer {
             font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
             margin: auto; max-width: 92%; padding-bottom: 50px;
