--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -307,18 +307,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
 <amp-mega-menu class="amp-desc" style="" height="40" layout="fixed-height">
-    <a name="block-0"></a>
-    <nav style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: space-between; align-items: center;">
+    <!-- <a name="block-0"></a> -->
+    <NAV style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: space-between; align-items: center;">
         <ul>
             <li>        <a href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold;">ЦИННАБСИН</a>
             </li>
@@ -337,7 +328,7 @@
                 <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" role="button">Где купить</a>
             </li>
         </ul>
-    </nav>
+    </NAV>
 </amp-mega-menu>
 <div class="header-container" style="">
     <div style="position: relative; display: flex; max-width: 1200px; margin: auto;" class="media">
@@ -485,7 +476,7 @@
                 <amp-accordion class="accordion" animate>
 
                     <section>
-                        <div style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Детальнее</div>
+                        <header style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Детальнее</header>
                         <div>
                             <div style="display: flex; justify-content: center;margin: 20px 0;">
                                 <div class="pill"></div>
