--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -255,7 +255,7 @@
 <div class="mobile-menu">
     <div class="header">
 
-        <div href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold; padding-left: 35px;">ЦИННАБСИН</div>
+        <div style="cursor: pointer; font-family: sans-serif; font-weight: bold; padding-left: 35px;">ЦИННАБСИН</div>
         <a style="font-family: sans-serif;" target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" role="button">Где купить</a>
         <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 40px; border: none; background-image: url('./images/1.svg')">
 
