--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -308,7 +308,7 @@
 
 
 <amp-mega-menu class="amp-desc" style="" height="40" layout="fixed-height">
-    <amp-list style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: space-between; align-items: center;">
+    <nav style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: space-between; align-items: center;">
         <ul style="cursor: pointer; font-family: sans-serif; color: rgba(0,0,0,.5);">
             <li>
                 <a  href="#block-1" role="button">Состав</a>
@@ -323,7 +323,7 @@
                 <a target="_blank" href="https://tabletka.by/search?request=%D1%86%D0%B8%D0%BD%D0%BD%D0%B0%D0%B1%D1%81%D0%B8%D0%BD" role="button">Где купить</a>
             </li>
         </ul>
-    </amp-list>
+    </nav>
 </amp-mega-menu>
 <div class="header-container" style="">
     <div style="position: relative; display: flex; max-width: 1200px; margin: auto;" class="media">
