--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -517,7 +517,7 @@
                 <amp-accordion class="accordion" animate>
 
                     <section>
-                        <div style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Детальнее</div>
+                        <header style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Детальнее</header>
                         <div>
                             <div style="display: flex; justify-content: center;margin: 20px 0;">
                                 <div class="pill"></div>
