--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -518,7 +518,7 @@
 
                     <section>
                         <header style="margin: auto; width: 150px;padding: 10px 30px;background-color: #e98300;color:white;border-radius: 12px;font-family: sans-serif;box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);outline: none; text-align: center" class="menu">Детальнее</header>
-                        <div>
+                        <header>
                             <div style="display: flex; justify-content: center;margin: 20px 0;">
                                 <div class="pill"></div>
                                 <div class="pill"></div>
@@ -546,7 +546,7 @@
                             <p style="font-family: sans-serif;text-align: center;">
                                 (по 1-2 таблетке 3 раза в сутки)<br>Длительность курса 4-6 недель
                             </p>
-                        </div>
+                        </header>
                     </section>
                 </amp-accordion>
             </div>
