--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -21,7 +21,7 @@
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
 
 
-        .disclamer {
+        /*.disclamer {
             font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
             margin: auto; max-width: 92%; padding-bottom: 50px;
         }
@@ -245,7 +245,7 @@
             .comp-4-p {
                  top:-95px; left: 25px;
             }
-    }
+    }*/
     </style></noscript>
 
         
