--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -18,235 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
-
-
-        /*.disclamer {
-            font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
-            margin: auto; max-width: 92%; padding-bottom: 50px;
-        }
-        .pill{
-            width: 33px;
-            height: 33px;
-            margin-right: 5px;
-            background: url("./images/tabl.jpg") no-repeat center / contain;
-        }
-        .main-text {
-            position: relative; top: -60px; left: 120px; font-size: 32px; font-family: sans-serif; font-weight: 500;
-        }
-        .pack {
-            position: relative; z-index: 1; height: 350px; width: 270px; background-image: url('./images/cynabisin.png'); background-position: center;background-size: cover; background-repeat: no-repeat;
-        }
-        .shma {
-            top: 120px;left: 170px; position: absolute; height: 220px; width: 380px; background-image: url('./images/monster-1.png'); background-position: center;background-size: contain; background-repeat: no-repeat;
-        }
-        .header-container {
-            display: flex; height: 550px; background-image: url('./images/bg2.jpg'); background-position: top;background-size: cover; background-repeat: no-repeat;
-        }
-        .main-text_ul {
-            position: absolute; top: 180px; left: 550px; width: 400px; font-family: sans-serif;font-size: 16px;
-        }
-        .text-el {
-            max-width: 22%;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5px;
-            position: fixed;
-            z-index: 2;
-            background: white;
-            width: 100vw;
-            margin-top: -10px;
-            height: 40px;
-        }
-        .paz-mob {
-            width: 30%;
-        }
-        .paz-text {
-            width: 60%;
-        }
-        .how-width {
-            width: 25%;
-            border: 1px solid rgba(0, 0, 0, 0.125);
-        }
-        .amp-desc {
-            display: flex;
-        }
-        .disc-width {
-            width: 20%;
-        }
-        .disc-width-center {
-            width: 40%;
-        }
-/*        .disc-mob-back {
-            width: 98%;
-        }*/
-        .comp-4-mob {
-            width: 100vw;height: 300px; margin: 100px 0; background-color: rgb(235, 235, 235);
-        }
-        .comp-1 {
-            position: relative;left: 90px; top: 130px;z-index: 1;border: 2px solid rgb(139, 139, 139); border-radius: 50%; height: 185px; width: 185px; background-image: url('./images/gidrastis.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-        }
-        .comp-2 {
-            position: relative;left: 30px;top: 30px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 185px; width: 185px; background-image: url('./images/cinnabaris.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-        }
-        .comp-3 {
-            position: relative; top: -40px; z-index: 1; height: 350px; width: 270px; background-image: url('./images/cynabisin.png'); background-position: center;background-size: cover; background-repeat: no-repeat;
-        }
-        .comp-4 {
-            position: relative;right: 30px;top: 30px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 185px; width: 185px; background-image: url('./images/echinacea.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-        }
-        .comp-5 {
-            position: relative;right: 90px; top: 130px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 185px; width: 185px; background-image: url('./images/calium.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-        }
-        .comp-1-p {
-            position: relative; top: -70px; left: 25px; font-family: sans-serif;
-        }
-        .comp-2-p {
-            position: relative; top: -70px; left: 25px; font-family: sans-serif;
-        }
-        .comp-3-p {
-            position: relative; top: -70px; left: 25px; font-family: sans-serif;
-        }
-        .comp-4-p {
-            position: relative; top: -70px; left: 70px; font-family: sans-serif;
-        }
-        .mobile-menu {
-            display: none;
-            background-color: white;
-            width: 100vw;
-            z-index: 2;
-        }
-        .menu-li {
-            margin-bottom: 15px;
-        }
-        .res-top {
-            width: 100vw; margin: 40px 0 200px;
-        }
-
-        @media screen and (max-width: 1024px)
-    {.media {
-        flex-direction: column-reverse;
-        }
-        .media-column {
-            flex-direction: column;
-        }
-        .media-wrap {
-            flex-wrap: wrap;
-        }
-        .res-top {
-            width: 78vw;
-            padding: 0 40px;
-             margin: 40px 0 100px;
-        }
-        .disclamer {
-            font-size: 20px; font-weight: bolder;
-            padding-bottom: 40px;
-        }
-            .mobile-menu {
-                height: 40px;
-                display: block;
-                padding-top: 10px;
-            }
-        .main-text {
-            padding-left: 40px;
-            font-size: 21px;
-            position: initial;
-        }
-        .pack {
-            height: 290px;
-            width: 170px;
-            margin-left: 10px;
-            background-size: contain;
-        }
-        .shma {
-            top: 221px;
-            left: 51px;
-            position: absolute;
-            height: 120px;
-            width: 250px;
-        }
-        .header-container {
-            padding-bottom: 200px;
-        }
-        .main-text_ul {
-            top: 430px;
-            left: 0;
-            max-width: 250px;
-        }
-        .plate-el {
-            margin: 40px 10px;
-        }
-        .mob-column {
-            flex-direction: column;
-        }
-            .text-el {
-                max-width: 90%;
-                padding: 0 40px;
-            }
-            .paz-mob {
-                width: 73%;
-                padding: 0 40px;
-            }
-            .paz-text {
-                width: 73%;
-                padding: 40px;
-
-            }
-            .media-width {
-                width: 100%;
-                padding: 10px;
-            }
-            .how-width {
-                width: 90%;
-                border: none;
-            }
-            .amp-desc {
-                display: none;
-            }
-            .comp-4-mob {
-                width: 100vw;height: 900px; margin: 100px 0; background-color: rgb(235, 235, 235);
-            }
-            .comp-column {
-                flex-wrap: wrap;
-                position: relative;
-            }
-            .disc-width {
-                width: 90%;
-            }
-            .disc-width-center {
-                width: 90%;
-            }
-            .disc-mob-back {
-                width: 78%;
-                padding: 0 40px;
-            }
-            .comp-1 {
-                position: initial;margin: 20px;margin-top: 80px;left: 90px; top: 130px;z-index: 1;border: 2px solid rgb(139, 139, 139); border-radius: 50%; height: 115px; width: 115px; background-image: url('./images/gidrastis.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-            }
-            .comp-2 {
-                position: initial;margin: 20px;margin-top: 80px;left: 30px;top: 30px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 115px; width: 115px; background-image: url('./images/cinnabaris.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-            }
-            .comp-3 {
-                position: absolute;
-                top: 500px;
-                z-index: 1;
-                height: 320px;
-                width: 240px;
-            }
-            .comp-4 {
-                position: initial;margin: 20px;margin-top: 80px;right: 30px;top: 30px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 115px; width: 115px; background-image: url('./images/echinacea.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-            }
-            .comp-5 {
-                position: initial;margin: 20px;margin-top: 80px;right: 90px; top: 130px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 115px; width: 115px; background-image: url('./images/calium.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
-            }
-            .comp-4-p {
-                 top:-95px; left: 25px;
-            }
-    }*/
-    </style></noscript>
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
         
 </head>
