--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -40,7 +40,7 @@
     </div>
 
 
-    <amp-sidebar id="sidebar" side="right" >
+    <amp-sidebar id="sidebar" side="right" width="100%" height="100%">
             <section>
                 <ul style="list-style: none;padding: 0;">
                     <li class="menu-li">
