--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -40,7 +40,7 @@
     </div>
 
 
-    <amp-sidebar id="sidebar" side="right" width="300px" height="300px">
+    <amp-sidebar id="sidebar1" layout="nodisplay" side="right">
             <section>
                 <ul style="list-style: none;padding: 0;">
                     <li class="menu-li">
