--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<a href="Cinnabsin-RU/index.html">Cinnabsin-RU</a>
 			<a href="Cinnabsin-UZ/index.html">Cinnabsin-UZ</a>
 			<a href="Cinnabsin-GE/index.html">Cinnabsin-GE</a>
-			
+			<a href="Alpikol-rs/index.html">Alpikol-rs</a>
 		</section>
 	</main>
 
@@ -252,6 +252,9 @@
 	}
 	a:nth-child(52)::before {
 		background: url("./Cinnabsin-GE/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(53)::before {
+		background: url("./Alpikol-Grs/logo.svg")no-repeat center / contain;
 	}
 </style>
 
