--- a/Cinnabsin-GE/index.html
+++ b/Cinnabsin-GE/index.html
@@ -131,7 +131,8 @@
         }
 
         @media screen and (max-width: 1024px)
-    {.media {
+    {
+        .media {
         flex-direction: column-reverse;
         }
         .media-column {
