--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -607,7 +607,7 @@
         <li>
           <div></div>
           <p class="translated-text" key="doses-text-three">
-            Дітям старше 12 років<br /><span
+            Дітям старше 12 років та дорослим<br /><span
               >По 12 крапель один раз на добу під час їжі</span
             >
           </p>
