--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -100,14 +100,12 @@
 
 <amp-mega-menu class="amp-desc" style="display: flex;" height="40" layout="fixed-height">
     <nav style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: flex-end; align-items: center;">
-    	<ul>
-    		<li>
-                <a style="margin-bottom: 15px;margin-right: 10px;
+        <ul style="cursor: pointer; font-family: sans-serif; color: rgba(0,0,0,.5);">
+        	<li>
+                <a style=" margin-right: 60vw; margin-bottom: 15px;
     text-decoration: none;
     color: black; " href="#block-1" role="button">Циннабсин</a>
             </li>
-    	</ul>
-        <ul style="cursor: pointer; font-family: sans-serif; color: rgba(0,0,0,.5);">
             <li>
                 <a style="margin-bottom: 15px;margin-right: 10px;
     text-decoration: none;
