--- a/Cinnabsin-GE/index.html
+++ b/Cinnabsin-GE/index.html
@@ -413,18 +413,16 @@
             <p style="line-height: 25px; font-family: sans-serif;">აღადგენს ცხვირით სუნთქვას ცხვირის ღრუს ლორწოვანი გარსისა და ცხვირის დანამატი წიაღების შეშუპების შემცირებით.</p>
         </div>
         <div class="text-el" style="border-right: 1px solid #ebebeb;  padding-right: 20px;">
-            <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">სეკრეტოლიზური მოქმედება <sup>3</sup></p>
-            <p style="line-height: 25px; font-family: sans-serif;">ათხიერებს სქელ ნაზალურ ლორწოს და  ხელს უწყობს მის გამოყოფას. 
-
-• ახდენს მოციმციმე ეპითელიუმის მუშაობის</p>
+            <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">სეკრეტოლიზური მოქმედება<sup>3</sup></p>
+            <p style="line-height: 25px; font-family: sans-serif;">ათხიერებს სქელ ნაზალურ ლორწოს და ხელს უწყობს მის გამოყოფას.</p>
         </div>
         <div class="text-el" style="border-right: 1px solid #ebebeb;  padding-right: 20px;">
-            <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">ნორმალიზებას <sup>3</sup></p>
-            <p style="line-height: 25px; font-family: sans-serif;">აღადგენს ცხვირის ლორწოვანი გარსისა და ცხვირის დანამატი წიაღების გაწმენდის ბუნებრივ მექანიზმს.</p>
+            <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">ახდენს მოციმციმე ეპითელიუმის მუშაობის ნორმალიზებას<sup>3</sup></p>
+            <p style="line-height: 25px; font-family: sans-serif;">აღადგენს ცხვირის ლორწოვანი გარსისა და ცხვირის დანამატი წიაღების გაწმენდის ბუნებრივ მექანიზმს</p>
         </div>
         <div class="text-el" style="  padding-right: 20px;">
-            <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">იმუნომოდულაციური მოქმედება <sup>3</sup></p>
-            <p style="line-height: 25px; font-family: sans-serif;">ზრდის   ორგანიზმის თავდაცვით უნარს, რაც აჩქარებს გამოჯანმრთელებას და ხელს უშლის მწვავე პროცესის ქრონიკულ პროცესში გადასვლას. </p>
+            <p style="color: #e98300; font-family: sans-serif; font-weight: bolder;">იმუნომოდულაციური მოქმედება<sup>3</sup></p>
+            <p style="line-height: 25px; font-family: sans-serif;">ზრდის ორგანიზმის თავდაცვით უნარს, რაც აჩქარებს გამოჯანმრთელებას და ხელს უშლის მწვავე პროცესის ქრონიკულ პროცესში გადასვლას.</p>
         </div>
 
     </div>
