--- a/Cinnabsin-by/index.html
+++ b/Cinnabsin-by/index.html
@@ -135,7 +135,8 @@
             <a target="_blank" href="./info.pdf" style="text-decoration: none; color: black; position: absolute; top: 100%; left: 30%; padding: 10px 30px; background-color: #f5e41e; border-radius: 12px; font-family: sans-serif;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)" >Инструкция</a>
 
         </div>
-        <div class="shma" style="top: 120px;left: 170px; position: absolute; height: 220px; width: 380px; background-image: url('./images/monster-1.png'); background-position: center;background-size: contain; background-repeat: no-repeat;"></div>
+        <amp-div class="shma"
+            style="top: 120px;left: 170px; position: absolute; height: 220px; width: 380px; background-image: url('./images/monster-1.png'); background-position: center;background-size: contain; background-repeat: no-repeat;"></amp-div>
         <h1 class="main-text" style="position: relative; top: -60px; left: 120px; font-size: 32px; font-family: sans-serif; font-weight: 500;" >НАСМОРК? ГАЙМОРИТ?<br>ЦИННАБСИН ОТ СМАРКАЧА ОСВОБОДИТ!</h1>
         <ul class="main-text_ul" style="position: absolute; top: 180px; left: 550px; width: 400px; font-family: sans-serif;font-size: 16px;">
             <li style="margin-bottom: 20px;">Устраняет заложенность носа и головную боль при насморке и гайморите<sup>2</sup></li>
