--- a/Tansilotren-LT/index.html
+++ b/Tansilotren-LT/index.html
@@ -502,6 +502,7 @@
                 <a target="_blank" href="https://www.nvaistine.lt/tonsilotren-tabletes-n40"></a>
                 <a target="_blank" href="https://www.benu.lt/dideles-nuolaidos-mazos-kainos/tonsilotren-125-mg10-mg50-mg5-mg25-mg-tabletes-n40"></a>
                 <a target="_blank" href="https://www.eurovaistine.lt/tonsilotren-tabletes-n40"></a>
+                <a target="_blank" href="https://www.100metu.lt/prekiu-katalogas/5/prekes/tonsilotren-lt-tab.-n40-deutsche-homoopathie"></a>
             </div>
             <div class="map-text">
                 <h3>Įrodymai</h3>
