--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -459,6 +459,7 @@
                   <a target="_blank" href="https://www.nvaistine.lt/influcid-tabletes-n40"></a>
                   <a target="_blank" href="https://www.benu.lt/dideles-nuolaidos-mazos-kainos/influcid-tabletes-n40"></a>
                   <a target="_blank" href="https://www.eurovaistine.lt/influcid-tabletes-n40"></a>
+                  <a target="_blank" href="https://www.100metu.lt/prekiu-katalogas/5/prekes/influcid-tab.-n40-deutsche-homoopathie"></a>
                 </div>
                 <ol>
                   <li>Influcid pakuotės lapelis</li>
