--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -16,6 +16,14 @@
     <!--    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>-->
   </head>
   <body>
+    <!-- //////license start -->
+      <div class="alert-license">
+  <a href="license.html">
+    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
+  </a>
+  <button class="license-off"><p>Slažem se</p></button>
+</div>
+<!-- //////license fin -->
     <div class="navigation-logo">
       <a href="index.html" class="logo">Alpikol</a>
       <div class="navigation-top" role="navigation">
