--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -19,7 +19,7 @@
     <!-- //////license start -->
       <div class="alert-license">
   <a href="license.html">
-    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta<br>slažete se sa upotrebom kolačića i naše <b>Politike privatnosti</b>
+    Ove stranice koriste tzv. kolačiće kako bi osigurali bolje korisničko iskustvo i funkcionalnost. Koristeći naše stranice slažete se s korištenjem kolačića i našim Pravilima o privatnosti</b>
   </a>
   <button class="license-off"><p>Slažem se</p></button>
 </div>
