--- a/Alpikol-HR/license.html
+++ b/Alpikol-HR/license.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Influcid</title>
+    <title>Alpikol</title>
     <meta name="description" content="Influcid" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/q10.png" type="image/png" />
