--- a/Alpikol-HR/index.html
+++ b/Alpikol-HR/index.html
@@ -18,9 +18,9 @@
   <body>
     <!-- //////license start -->
       <div class="alert-license">
-  <a href="license.html">
-    Ove stranice koriste tzv. kolačiće kako bi osigurali bolje korisničko iskustvo i funkcionalnost. Koristeći naše stranice slažete se s korištenjem kolačića i našim Pravilima o privatnosti</b>
-  </a>
+  <span>
+    Ove stranice koriste tzv. kolačiće kako bi osigurali bolje korisničko iskustvo i funkcionalnost. Koristeći naše stranice slažete se s korištenjem kolačića i našim <a  href="license.html" ><b>Pravilima o privatnosti</b></a>
+  </span>
   <button class="license-off"><p>Slažem se</p></button>
 </div>
 <!-- //////license fin -->
