--- a/Alpikol-rs/index.html
+++ b/Alpikol-rs/index.html
@@ -18,9 +18,9 @@
   <body>
     <!-- //////license start -->
       <div class="alert-license">
-  <a href="license.html">
-    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta slažete se sa upotrebom kolačića i naše Politike privatnosti</b>
-  </a>
+  <span>
+    Ovaj sajt koristi kolačiće kako bi poboljšao korisničko iskustvo. Nastavkom korišćenja ovog sajta slažete se sa upotrebom kolačića i naše <b><a href="license.html" >Politike privatnosti</b></a>
+  </span>
   <button class="license-off"><p>Slažem se</p></button>
 </div>
 <!-- //////license fin -->
