--- a/Cinnabsin-LT/index.html
+++ b/Cinnabsin-LT/index.html
@@ -19,6 +19,49 @@
   <meta name="viewport" content="width=device-width">
 
     <style amp-boilerplate>
+        .apt-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.apt-container a {
+  width: 200px;
+  height: 100px;
+  margin: 20px;
+  padding: 5px;
+  border-radius: 20px;
+  background: url("./images/icon_01_apteki_LT.jpg") no-repeat;
+  background-position: center !important;
+  background-size: 80% !important;
+    background-color: white !important;
+    box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+}
+
+.apt-container a:nth-child(2) {
+  background: url("./images/icon_06_apteki_MD.jpg") no-repeat center / contain;
+}
+.apt-container a:nth-child(3) {
+  background: url("./images/icon_01_apteki_MD.jpg") no-repeat center / contain;
+}
+.apt-container a:nth-child(4) {
+  background: url("./images/icon_04_apteki_LT.jpg") no-repeat center / contain;
+}
+.apt-container a:nth-child(5) {
+  background: url("./images/100 metu_logo.jpg") no-repeat center / contain;
+}
+
+sup {font-size:xx-small; vertical-align:super;}
+
+/*@media (prefers-reduced-motion: no-preference) {*/
+/*  .App-logo {*/
+/*    animation: App-logo-spin infinite 20s linear;*/
+/*  }*/
+/*}*/
+
+
+
         .disclamer {
             font-size: 30px; color: rgb(108,117,125); text-align: center; font-family: 'Open Sans Condensed', sans-serif; font-weight: lighter;
             margin: auto; max-width: 92%; padding-bottom: 50px;
@@ -617,6 +660,13 @@ iki 4 tablečių per dieną), kol pagerėja savijauta.
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
+<div class="apt-container">
+                  <a target="_blank" href="https://www.gintarine.lt/cinnabsin-n-tabletes-n40"></a>
+                  <a target="_blank" href="https://www.nvaistine.lt/cinnabsin-n-tabletes-n40"></a>
+                  <a target="_blank" href="https://www.benu.lt/visos-prekes?vars/brand/cinnabsin"></a>
+                  <a target="_blank" href="https://www.eurovaistine.lt/cinnabsin-n-tabletes-n40"></a>
+                  <a target="_blank" href="https://www.100metu.lt/prekiu-katalogas/5/prekes/cinnabsin-n-tab-n40"></a>
+                </div>
 <!-- <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Где купить</p>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
