--- a/Cinnabsin-LT/index.html
+++ b/Cinnabsin-LT/index.html
@@ -24,6 +24,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-bottom: 50px;
 }
 
 .apt-container a {
@@ -510,7 +511,7 @@ sup {font-size:xx-small; vertical-align:super;}
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-3"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;padding: 0 40px;">Kaip vartoti Cinnabsin N <span style="font-weight: bold;">Циннабсин</span></p>
+<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;padding: 0 40px;">Kaip vartoti Cinnabsin N <span style="font-weight: bold;"></span></p>
 <div style="width: 100vw; margin: 50px 0;">
     <p  style="max-width: 1200px; margin: auto; margin-bottom: 30px; text-align: center; font-family: sans-serif;padding: 0 40px;">Tabletes vartoti mažiausiai pusę valandos prieš valgį ar pusę valandos po jo. Nerekomenduojama vartoti šio vaisto su maistu ir gėrimais. Rekomenduojama leisti tabletėms lėtai ištirpti burnoje. Mažiems vaikams tabletes galima ištirpinti nedideliame kiekyje vandens. </p>
     <div style="display: flex; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
@@ -660,6 +661,7 @@ iki 4 tablečių per dieną), kol pagerėja savijauta.
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
+<p style="text-align: center; font-size: 28px; font-family: sans-serif;">Kur pirkti</p>
 <div class="apt-container">
                   <a target="_blank" href="https://www.gintarine.lt/cinnabsin-n-tabletes-n40"></a>
                   <a target="_blank" href="https://www.nvaistine.lt/cinnabsin-n-tabletes-n40"></a>
