--- a/Owey/index.html
+++ b/Owey/index.html
@@ -130,10 +130,112 @@
         <div class="header-title_product"></div>
         <p class="custom-mob_sub"><b>Гастритол</b> - не носи<br>з собою гастрит</p>
     </div>
+    <div class="stiker">
+        <p>СТАТИ ПАРТНЕРОМ</p>
+    </div>
 
 
 
-<a name="block-1"></a>
+    <a name="block-1"></a>
+    <div class="block-1">
+        <h3><b>OWAY</b> — це органічний шлях життя</h3>
+        <p>Мати доглянуте та здорове волосся можливо завдяки синергії фітоорганічних формул, що полягли в основу філософії бренду.
+            OW продукти створені біодинамічним методом та гарантують максимальний результат.<br>
+            Синергія біодинамічних рослин допомагає у лікуванні волосся та шкіри голови, а органічні формули OWAY забезпечують безліч можливостей професійного догляду та фарбування для всіх типів волосся. З нами можливо усе.
+        </p>
+    </div>
+    <div class="block-2">
+        <p>
+            //Догляд за волоссям і процедури з органічними та біодинамічними інгредієнтами//екофарба для волосся oway hcolor, органічні шампуні і кондиціонери, натуральні маски для волосся, органічні засоби для лікування шкіри голови, стайлінг, ребілдинг//бурштинове скло та алюміній//екологічний стиль життя//не тестується на тваринах// природний віск, ефірні масла, фітопротеїн і рослинні екстракти//принцип чесної торгівлі//якість, прозорість, натхнення
+        </p>
+    </div>
+    <div class="block-3">
+        <h3><b>OWAY</b>: 7 ліній та аксесуари. Обирай необхідне!</h3>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Фарбування</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Hsystem</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Догляд</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Трихологія</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Реконструкція</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>OW men</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Стайлінг</p>
+            </a>
+        </div>
+        <div class="block-3_plates-container">
+            <a class="block-3_plate">
+                <p>Аксесуари</p>
+            </a>
+        </div>
+    </div>
+    <div class="block-4">
+        <h3><b>OWAY</b> — цінності компанії</h3>
+        <p>
+            <b>Oway перший в світі</b> випустив косметику, який відмовився від пластикових контейнерів, помістивши всю продукцію в бурштинове скло та алюміній. Окрему частину виробничих матеріалів фахівці Oway вирощують самостійно, але сертифіковані інгредієнти також доставляють з Африки, Амазонії, Австралії, Індокитаю, Індонезії та інших екзотичних куточків планети.<br><b>Oway були одні з перших</b>, хто розробив оригінальну косметику для регулярного догляду та стайлінгу виключно з натуральних екстрактів. Особливістю бренду стало використання тільки натуральних рослинних екстрактів для створення професійних продуктів по догляду за волоссям і бажання зменшити негативний вплив на навколишнє середовище.<br>Біодинамічний метод є найбільш прозорим чистим типом культивування, без пестицидів, гербіцидів, інсектицидів і синтетичних добрив, які використовуються в традиційному сільському господарстві.<br>Продукція Oway не тестується на тваринах.
+        </p>
+    </div>
+    <div class="block-5">
+        
+    </div>
+    <div class="block-6">
+        <h3>стати партнером <b>OWAY</b></h3>
+         <div class="content-container" >
+             <form action="/send.php" method="POST">
+                 <div class="form-top">
+                     <div>
+                         <p>Ім'я</p>
+                         <input class="inp-name" id="name" name="name" type="text" required>
+                     </div>
+                     <div>
+                         <p>Прізвище</p>
+                         <input class="inp-lastname" id="lastname" name="lastname" type="text" required>
+                     </div>
+                     <div>
+                         <p>E-mail</p>
+                         <input class="inp-email" id="messanger-contact" name="messanger-contact" type="email" required>
+                     </div>
+                     <div>
+                         <p>Контактний номер</p>
+                         <input class="inp-phone" id="phone" name="phone" type="number" required>
+                     </div>
+                     <div>
+                         <p>Ваше повідомлення</p>
+                         <textarea class="form-text" id="message" name="main-text" type="text" required></textarea>
+                     </div>
+
+                 </div>
+                <div class="button-container">
+                    <button>Надіслати</button>
+                </div>
+             </form>
+         </div>
+
+     </div>
+    </div>
 
 
 
