--- a/activeFlora/index.html
+++ b/activeFlora/index.html
@@ -317,7 +317,7 @@
           Пробiотик для дорослих та дiтей з перших днiв життя
         </p>
         <p class="translated-text" key="header-subtext-two">
-          Не містить барвників, глютену, лактози, штучних пігментів
+          Не містить алергенних речовин: глютену, білку коров’ячого молока, молока, лактози, сахарози. 
         </p>
       </div>
     </div>
@@ -330,35 +330,35 @@
         <li>
           <div></div>
           <p class="translated-text" key="symptom-one">
-            При дiареї рiзного характеру
+            При дiареї рiзного характеру<sup>1</sup>
           </p>
         </li>
         <li>
           <div></div>
           <p class="translated-text" key="symptom-two">
-            Пiд час та пiсля прийому антибiотикiв
+            Пiд час та пiсля прийому антибiотикiв<sup>1</sup>
           </p>
         </li>
         <li>
           <div></div>
           <p class="translated-text" key="symptom-three">
-            При алергiчному дерматитi
+            При алергiчному дерматитi<sup>1</sup>
           </p>
         </li>
       </ul>
       <ul>
         <li>
           <div></div>
-          <p class="translated-text" key="symptom-four">Кишковi колiки</p>
+          <p class="translated-text" key="symptom-four">Кишковi колiки<sup>1</sup></p>
         </li>
         <li>
           <div></div>
-          <p class="translated-text" key="symptom-five">Біль у животі</p>
+          <p class="translated-text" key="symptom-five">Біль у животі<sup>1</sup></p>
         </li>
         <li>
           <div></div>
           <p class="translated-text" key="symptom-six">
-            Простудні захворювання
+            Інфекції у дітей, що відвідують дитячі садочки<sup>1</sup>
           </p>
         </li>
       </ul>
@@ -367,8 +367,8 @@
     <a class="link-stop" name="leader"></a>
     <div class="application">
       <h3 class="translated-text" key="application-text">
-        Ситуації різні - пробіотик "1"<br /><span
-          >АКТИВ ФЛОРА <small>бебі</small></span
+        СИТУАЦІЇ РІЗНІ – РІШЕННЯ ОДНЕ<br /><span
+          >АКТИВ АКТИВ ФЛОРА <small>бебі</small></span
         >
       </h3>
 <!--      <div class="fixed">-->
@@ -489,7 +489,7 @@
               class="parallax-title translated-text sec-text__dsc-2"
               key="application-text-two"
             >
-              Перший рівень доказовості!<sup>2</sup><br /><small
+              Перший рівень доказовості!<sup>1</sup><br /><small
                 >Лактобактерія LGG має найвищий рівень доказової бази при діареї
                 у дітей та дорослих.</small
               >
@@ -505,10 +505,9 @@
               class="parallax-title translated-text sec-text__dsc-3"
               key="application-text-three"
             >
-              Кратність прийому – 1 раз на добу!<br /><small
-                >Дітям з 0+ днів від народження до 3-х років – по 1 краплі один
-                раз на добу під час їжі.<br /><b
-                  >Зручний спосіб використання.</b
+              Кратність прийому – 1 раз на добу під час їжі!<br /><small
+                ><br /><b
+                  >Зручний спосіб застосування.</b
                 ></small
               >
             </div>
@@ -525,8 +524,8 @@
             >
               Мільярд (1х10<sup>9</sup>) бактерій LGG в одній краплі!<br /><small
                 >Перший європейський пробіотик з найвищим вмістом діючої
-                речовини (бактерії LGG) в одній краплі.<br /><b
-                  >Гарантія зручності призначеної терапії.<sup>1</sup></b
+                речовини (бактерії LGG) в одній краплі.<sup>2</sup><br /><b
+                  ></b
                 ></small
               >
             </div>
@@ -544,9 +543,9 @@
               class="parallax-title translated-text sec-text__dsc-5"
               key="application-text-five"
             >
-              Пробіотик з оливковою олією!<br /><small
+              Перший пробіотик з оливковою олією!<sup>2</sup><br /><small
                 >Жирні кислоти оливкової олiї найбільш споріднені з жирними
-                кислотами грудного молока.</small
+                кислотами грудного молока.<sup>3</sup></small
               >
             </div>
           </div>
@@ -563,7 +562,7 @@
               class="parallax-title translated-text sec-text__dsc-6"
               key="application-text-six"
             >
-              Найбільш вивчена бактерія!<sup>2</sup><br /><small
+              Найбільш вивчена бактерія!<sup>1</sup><br /><small
                 >Lactobacillus rhamnosus (LGG) є найбільш вивченим у світі
                 штамом пробіотичних мікроорганізмів.</small
               >
@@ -576,7 +575,7 @@
     </div>
     <a class="link-stop" name="acting"></a>
     <h3 class="translated-text" key="acting-text">
-      Актив флора бебi захищає та вiдновлює мiкрофлору кишечника
+      АКТИВ ФЛОРА БЕБІ ПІДТРИМУЄ НОРМАЛЬНИЙ БАЛАНС КИШКОВОЇ МІКРОФЛОРИ
     </h3>
     <div class="protect">
       <div></div>
@@ -698,19 +697,26 @@
     <div class="disclamer">
       <ol>
         <li class="translated-text" key="disclamer-text-one">
-          Інструкція до застосування
+          WGO Global Guideline Probiotics and prebiotics, 2017
         </li>
         <li class="translated-text" key="disclamer-text-two">
-          WGO (Всесвітня Гастроентерологічна Організація
+          PharmXplorer 12.2020 
+        </li>
+        <li class="translated-text" key="disclamer-text-two">
+          L'olio extravergine oliva e' simile al latte materno - Alimentazione - Salute e Benessere - ANSA.it
         </li>
       </ol>
       <p class="translated-text" key="disclamer-text">
-        Актив Флора бебі 5 мл. Дієтична добавка. Не є лікарським засобом. На
-        правах реклами. Перед застосуванням бажано проконсультуватись з лікарем
-        та ознайомитися з інструкцією для застосування. Зберігати у недоступному
-        для дітей місці. Виробник: Komarko Sp. z o. o. (Польща), висновок санітарно-епідеміологічної експертизи №3/28-А-3414-20-69296 Е від 25.11.2020 р. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісова
-        30-А, Пуща-Водиця, м. Київ, 04075; телефон: (044) 401-81-03,
-        www.alpenpharma.com
+        На правах реклами. Дієтична добавка «Актив Флора бебі» 5 мл. Не є лікарським засобом. Перед застосуванням дієтичної добавки необхідно ознайомитись з інструкцією для застосування та проконсультуватися з лікарем. Зберігати у недоступному для дітей місці. 
+
+Висновок СЕЕ № 3/28-А-3414-20-69296 Е від 25.11.2020 р.  
+
+Якщо Ви хочете повідомити про виникнення побічної реакції і/або маєте запитання стосовно медичної інформації і/або скарги на якість дієтичної добавки «Актив Флора бебі», будь ласка, надсилайте лист на електронну адресу: pharmacovigilance-ua@alpenpharma.com» <br>
+Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03. 
+
+Виробник: Komarko Sp. z o. o. (Польща). 
+
+Постачальник:  Альпен Фарма АГ (Швейцарія). 
       </p>
     </div>
 
