--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<a href="Alpikol-rs/index.html">Alpikol-rs</a>
 			<a href="Cinnabsin-LT/index.html">Cinnabsin-LT</a>
 			<a href="Cinnabsin-MD/index.html">Cinnabsin-MD</a>
-			<a href="Owey/index.html">Owey</a>
+			<a href="Oway/index.html">Owey</a>
 		</section>
 	</main>
 
