--- a/Owey/index.html
+++ b/Owey/index.html
@@ -99,23 +99,35 @@
 
 
 <!--////////// slider-->
-    <div class="slider-text">
-        <h2><b>OWAY</b> — запорука здорового волосся та шкіри твоєї голови</h2>
-    </div>
 
 <div class="slider">
     <div class="slider__wrapper">
         <div class="slider__item">
-            <div class="slider-img-1"></div>
+                
+            <div class="slider-img-1">
+                <h2><b>OWAY</b> — запорука здорового волосся та шкіри твоєї голови</h2>
+            </div>
         </div>
         <div class="slider__item">
-            <div class="slider-img-2"></div>
+            <div class="slider-img-2">
+            <h2>Кожного дня я різна з <b>OWAY</b></h2>
+                
+            </div>
         </div>
         <div class="slider__item">
-            <div class="slider-img-3"></div>
+            <div class="slider-img-3">
+                <h2>Доглянуте волосся завдяки фітоорганічним формулам <b>OWAY!</b></h2>
+            </div>
         </div>
         <div class="slider__item">
-            <div class="slider-img-4"></div>
+            <div class="slider-img-4">
+                <h2>З <b>OWAY</b> будь-яке укладання волосся вам підвладне</h2>
+            </div>
+        </div>
+        <div class="slider__item">
+            <div class="slider-img-5">
+                <h2>Унікальність натуральних компонентів, що нормалізують роботу шкіри голови</h2>
+            </div>
         </div>
     </div>
     <a class="slider__control slider__control_left" href="#" role="button"></a>
