--- a/Owey/hsystem.html
+++ b/Owey/hsystem.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_hsystem"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>Hsystem – коли система фарбування перетворюється в оздоровчу процедуру для фарбування волосся.</h1>
@@ -233,7 +233,7 @@
                 <p>Фарбування</p>
             </a>
             <a class="block-3_plate" href="./hsystem.html">
-                <div class="on-hover"></div>
+                <div class="on-hover on-hover_active"></div>
                 <p>Hsystem</p>
             </a>
             <a class="block-3_plate" href="./care.html">
@@ -264,6 +264,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
