--- a/Owey/index.html
+++ b/Owey/index.html
@@ -137,13 +137,13 @@
 <!--//////////slider-->
 
 
-    <div class="stiker">
+    <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
 
 
-    <a name="block-1"></a>
+
     <div class="block-1">
         <h3><b>OWAY</b> — це органічний шлях життя</h3>
         <p>Мати доглянуте та здорове волосся можливо завдяки синергії фітоорганічних формул, що полягли в основу філософії бренду.
@@ -207,9 +207,11 @@
         </p>
     </div>
     <div class="block-5">
-        
     </div>
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
