--- a/Owey/manifest.html
+++ b/Owey/manifest.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_manifest"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>Маніфест</h1>
@@ -129,35 +129,35 @@
 
     <div class="block-3 block-3-small">
         <div class="block-3_plates-container">
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./hcolor.html">
                 <div class="on-hover"></div>
                 <p>Фарбування</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./hsystem.html">
                 <div class="on-hover"></div>
                 <p>Hsystem</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./care.html">
                 <div class="on-hover"></div>
                 <p>Догляд</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./special.html">
                 <div class="on-hover"></div>
                 <p>Трихологія</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./rebild.html">
                 <div class="on-hover"></div>
                 <p>Реконструкція</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./men.html">
                 <div class="on-hover"></div>
                 <p>OW men</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./styling.html">
                 <div class="on-hover"></div>
                 <p>Стайлінг</p>
             </a>
-            <a class="block-3_plate">
+            <a class="block-3_plate" href="./accessories.html">
                 <div class="on-hover"></div>
                 <p>Аксесуари</p>
             </a>
@@ -165,6 +165,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
