--- a/Owey/accessories.html
+++ b/Owey/accessories.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>OW аксесуари – турбота, що проявляється в деталях.</h1>
@@ -150,13 +150,16 @@
                 <p>Стайлінг</p>
             </a>
             <a class="block-3_plate" href="./accessories.html">
-                <div class="on-hover"></div>
+                <div class="on-hover  on-hover_active"></div>
                 <p>Аксесуари</p>
             </a>
         </div>
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
