--- a/Owey/care.html
+++ b/Owey/care.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_care"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>OW догляд – повсякденна турбота за вашим волоссям.</h1>
@@ -268,7 +268,7 @@
                 <p>Hsystem</p>
             </a>
             <a class="block-3_plate" href="./care.html">
-                <div class="on-hover"></div>
+                <div class="on-hover  on-hover_active"></div>
                 <p>Догляд</p>
             </a>
             <a class="block-3_plate" href="./special.html">
@@ -295,6 +295,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
