--- a/Owey/hcolor.html
+++ b/Owey/hcolor.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_hcolor"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>Hcolor - органічний шлях в фарбуванні.</h1>
@@ -213,7 +213,7 @@
     <div class="block-3 block-3-small">
         <div class="block-3_plates-container">
             <a class="block-3_plate" href="./hcolor.html">
-                <div class="on-hover"></div>
+                <div class="on-hover on-hover_active"></div>
                 <p>Фарбування</p>
             </a>
             <a class="block-3_plate" href="./hsystem.html">
@@ -248,6 +248,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
