--- a/Owey/men.html
+++ b/Owey/men.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_men"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>OW Men – виключна серія догляду для чоловіків.</h1>
@@ -185,7 +185,7 @@
                 <p>Реконструкція</p>
             </a>
             <a class="block-3_plate" href="./men.html">
-                <div class="on-hover"></div>
+                <div class="on-hover on-hover_active"></div>
                 <p>OW men</p>
             </a>
             <a class="block-3_plate" href="./styling.html">
@@ -200,6 +200,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
