--- a/Owey/rebild.html
+++ b/Owey/rebild.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_rebild"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>Ребілдинг – це OW метод з відновлення пошкодженого волосся.</h1>
@@ -166,7 +166,7 @@
                 <p>Трихологія</p>
             </a>
             <a class="block-3_plate" href="./rebild.html">
-                <div class="on-hover"></div>
+                <div class="on-hover on-hover_active"></div>
                 <p>Реконструкція</p>
             </a>
             <a class="block-3_plate" href="./men.html">
@@ -185,6 +185,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
