--- a/Owey/special.html
+++ b/Owey/special.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_special"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>OW особливі догляди – професійне лікування вашої шкіри голови.</h1>
@@ -223,7 +223,7 @@
                 <p>Догляд</p>
             </a>
             <a class="block-3_plate" href="./special.html">
-                <div class="on-hover"></div>
+                <div class="on-hover on-hover_active"></div>
                 <p>Трихологія</p>
             </a>
             <a class="block-3_plate" href="./rebild.html">
@@ -246,6 +246,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
