--- a/Owey/styling.html
+++ b/Owey/styling.html
@@ -104,9 +104,9 @@
 
     <div class="static-main-img static-main-img_styling"></div>
 
-        <div class="stiker">
+        <a class="stiker" href="#sticker">
         <p>СТАТИ ПАРТНЕРОМ</p>
-    </div>
+    </a>
 
     <div class='block-4'>
         <h1>OW стайлінг - ідеальний образ при будь-яких умовах.</h1>
@@ -197,7 +197,7 @@
                 <p>OW men</p>
             </a>
             <a class="block-3_plate" href="./styling.html">
-                <div class="on-hover"></div>
+                <div class="on-hover on-hover_active"></div>
                 <p>Стайлінг</p>
             </a>
             <a class="block-3_plate" href="./accessories.html">
@@ -208,6 +208,9 @@
     </div>
     
     <div class="block-6">
+        <div class="puppet">
+            <a name="sticker"></a>
+        </div>
         <h3>стати партнером <b>OWAY</b></h3>
          <div class="content-container" >
              <form action="/send.php" method="POST">
