--- a/Owey/styling.html
+++ b/Owey/styling.html
@@ -22,7 +22,7 @@
 <a name='top'></a>
     <div class="outer-navigation-container">
         <div class="navigation-container">
-            <a class="logo-container" href="#top"></a>
+            <a class="logo-container" href="./index.html"></a>
             <!-- <a class="where-to-buy-mob" href="#block-6">ДЕ КУПИТИ</a> -->
             <div class="navigation-menu">
                 <a class="navmenu" href="./hcolor.html" >Фарбування</a>
@@ -33,7 +33,7 @@
                 <a class="navmenu" href="./men.html">OW men</a>
                 <a class="navmenu active" href="./styling.html">Стайлінг</a>
                 <a class="navmenu" href="./accessories.html">Аксесуари</a>
-                <a class="navmenu" href="./index.html">Про нас</a>
+                <a class="navmenu" href="./manifest.html">Про нас</a>
 
                 <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ</a>
                 <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>/  RU</p></a>
@@ -73,7 +73,7 @@
                             <a class="navmenu menuLi" href="./accessories.html">Аксесуари</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="./index.html">Про нас</a>
+                            <a class="navmenu menuLi" href="./manifest.html">Про нас</a>
                         </li>
 <!--                        <li>-->
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
