--- a/Owey/hcolor.html
+++ b/Owey/hcolor.html
@@ -47,7 +47,7 @@
                     <ul id="menu">
                         <li>
 
-                            <input class="input-li" type="checkbox"/><a class="navmenu menuLi  active" href="./hcolor.html" >Фарбування
+                            <a class="navmenu menuLi  active" href="./hcolor.html" >Фарбування
 
                             </a>
                         </li>
