--- a/Owey/hcolor.html
+++ b/Owey/hcolor.html
@@ -113,6 +113,16 @@
         <h4>
             <b>HCOLOR</b> – СИСТЕМА ФАРБУВАННЯ З ДОГЛЯДОМ ЗА ВОЛОССЯМ БЕЗ АМІАКУ З БІОДИНАМІЧНИМИ, ОРГАНІЧНИМИ КОМПОНЕНТАМИ НА ОСНОВІ «ЧЕСНОЇ ТОРГІВЛІ».
         </h4>
+        <p><b>Переваги фарбника Hcolor:</b></p>
+        <ul>
+            <li>блиск фарбованого волосся</li>
+            <li>захист структури волосся, навіть під час знебарвлення</li>
+            <li>велика палітра відтінків (94) </li>
+            <li>комфортне відчуття на шкірі голови, відсутність парів аміаку </li>
+            <li>100%покриття сивини </li>
+            <li>гарантований колір надовго завдяки мікропігментам та фітопротеїнам </li>
+            <li>екологічна упаковка</li>
+        </ul>
         <p>
             Для надання волоссю блиску та зволоження під час технічних процедур ми використовуємо дві олії багаті на поживні речовини з лісів Борнео та Полінезії. Завдяки використанню мікропігментів відтінки виходять яскравими й стійкими. <b>З системою Hcolor</b> ви не обмежені у виборі вашого ідеального кольору: на 100% зафарбовує сивину, освітлює волосся на 4 тони (рівня), і додає зачісці неймовірних переливів.</p>
 
