--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 		<section class="testview">
 			<a href="gastritol/index.html">gastritol</a>
 			<a href="activeFlora/index.html">activeFlora</a>
-			<a href="lazea/index.html">lazea</a>
-			<a href="neiroplant/index.html">neiroplant</a>
+			<a href="lazea/index.html">laSea</a>
+			<a href="neiroplant/index.html">neuroplant</a>
 			<a href="apicold/index.html">apicold</a>
 			<a href="Esberitoks/index.html">Esberitoks</a>
 			<a href="Vitango/index.html">Vitango</a>
 			<a href="Klimaktoplan/index.html">Klimaktoplan</a>
 			<a href="Alpikol/index.html">Alpikol</a>
-			<a href="bioelektra/index.html">bioelektra</a>
+			<a href="bioelektra/index.html">biolectra</a>
 			<a href="isla/index.html">isla</a>
-			<a href="trachisan/index.html">trahisan</a>
+			<a href="trachisan/index.html">trachisan</a>
 			<a href="influcid/index.html">influcid</a>
 			<a href="prospan/index.html">prospan</a>
 			<!-- <a href="isla-ru/index.html">isla-ru</a> -->
@@ -38,24 +38,24 @@
 			<a href="influcid-MN/index.html">influcid-MN</a>
 			<a href="influcid-Romania/index.html">influcid-Romania</a>
 			<a href="influcid-Moldova/index.html">influcid-Moldova</a>
-			<a href="Tansilotren/index.html">Tansilotren</a>
+			<a href="Tansilotren/index.html">tOnsilotren</a>
 			<a href="influcid-Georgia/index.html">influcid-Georgia</a>
 			<a href="influcid-Uzbekistan/index.html">influcid-Uzbekistan</a>
-			<a href="Tansilotren-Ukraine/index.html">Tansilotren-Ukraine</a>
-			<a href="Tansilotren-Georgia/index.html">Tansilotren-Georgia</a>
-			<a href="Tansilotren-KZ/index.html">Tansilotren-KZ</a>
-			<a href="Tansilotren-AZ/index.html">Tansilotren-AZ</a>
-			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
+			<a href="Tansilotren-Ukraine/index.html">tOnsilotren-Ukraine</a>
+			<a href="Tansilotren-Georgia/index.html">tOnsilotren-Georgia</a>
+			<a href="Tansilotren-KZ/index.html">tOnsilotren-KZ</a>
+			<a href="Tansilotren-AZ/index.html">tOnsilotren-AZ</a>
+			<a href="Tansilotren-BY/index.html">tOnsilotren-BY</a>
 			<a href="Vaksol/index.html">Vaksol</a>
 			<a href="Solidagoren/index.html">Solidagoren</a>
 			<a href="gastritol-new/index.html">gastritol-new</a>
-			<a href="Tansilotren-Moldova/index.html">Tansilotren-Moldova</a>
+			<a href="Tansilotren-Moldova/index.html">tOnsilotren-Moldova</a>
 			<a href="influcid-LT/index.html">influcid-LT</a>
-			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
+			<a href="Tansilotren-Li/index.html">tOnsilotren-Li</a>
 			<a href="SwissPharm/index.html">SwissPharm</a>
 			<a href="prospan-by/index.html">prospan-by</a>
 			<a href="Klimaktoplan-kz/index.html">Klimaktoplan-kz</a>
-			<a href="umkalor/index.html">umkalor</a>
+			<a href="umkalor/index.html">umCkalor</a>
 			<a href="prospan-int/index.html">prospan-int</a>
 			<a href="Cinnabsin/index.html">Cinnabsin</a>
 			<a href="prospan-MD/index.html">prospan-MD</a>
